--- a/index.html
+++ b/index.html
@@ -95,19 +95,35 @@
             <div class="menu">
               <ul class="dsmenu">
                 <li>
-                  <a class="active" href="index.html">Trang chủ</a>
+                  <a
+                    class="active"
+                    href="https://web-game-vui1223.000webhostapp.com/"
+                    >Trang chủ</a
+                  >
                 </li>
                 <li>
-                  <a href="giaitri.html">Giải trí</a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/giaitri.html"
+                    >Giải trí</a
+                  >
                 </li>
                 <li>
-                  <a href="kinhdi.html">Kinh dị</a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/kinhdi.html"
+                    >Kinh dị</a
+                  >
                 </li>
                 <li>
-                  <a href="chienthuat.html">Chiến thuật</a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/chienthuat.html"
+                    >Chiến thuật</a
+                  >
                 </li>
                 <li>
-                  <a href="Thethao.html">Thể thao</a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/Thethao.html"
+                    >Thể thao</a
+                  >
                 </li>
               </ul>
             </div>
