--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
                   <a href="">Low die teen eye</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="game1.html"><button type="button">Chơi</button></a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/game1.html"
+                    ><button type="button">Chơi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -223,7 +226,9 @@
                   <a href="">Bắn súng</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="FPS1.html"><button type="button">Chơi</button></a>
+                  <a href="https://web-game-vui1223.000webhostapp.com/Pong.html"
+                    ><button type="button">Chơi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -238,7 +243,9 @@
                   <a href="">Pong</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="Pong.html"><button type="button">Chơi</button></a>
+                  <a href="https://huydinh505.github.io/Pong-game/"
+                    ><button type="button">Chơi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -254,7 +261,10 @@
                   <a href="">Flappy Bird</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="Game2.html"><button type="button">Chơi</button></a>
+                  <a
+                    href="https://web-game-vui1223.000webhostapp.com/Game2.html"
+                    ><button type="button">Chơi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -269,7 +279,9 @@
                   <a href="">Game siêu cấp vip pro</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="Game2D.html"><button type="button">Chơi</button></a>
+                  <a href="https://huydinh505.github.io/Game1/"
+                    ><button type="button">Chơi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -285,7 +297,7 @@
                   <a href="">invaders space</a>
                 </div>
                 <div class="rating-product-play">
-                  <a href="invaders space.html"
+                  <a href="https://huydinh505.github.io/invaders-space/"
                     ><button type="button">Chơi</button></a
                   >
                 </div>
